--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-#spring.datasource.username=kodilla
-#spring.datasource.password=your_password
-#spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+spring.datasource.username=kodilla
+spring.datasource.password=your_password
+spring.jpa.database=mysql
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.database=postgresql
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=cf5da0ddad1ac19e2def86cb1d2d0746
@@ -22,3 +22,5 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+admin.mail=bartosz.kedziora89@gmail.com
