--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
+    implementation 'junit:junit:4.12'
+    testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	runtimeOnly 'mysql:mysql-connector-java'
