--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
@@ -24,3 +26,19 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 admin.mail=bartosz.kedziora89@gmail.com
+
+# ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=Bartosz
+info.app.owner.surname=Kedziora
+
+info.app.administrator.email=bartosz.kedziora89@gmail.com
+info.app.administrator.adress.street=Karoliny 
+info.app.administrator.adress.number=5
+
+info.company.name=kodilla course
+info.company.goal=Future is tomorrow
+info.company.email=tasks@crud.com
+info.company.phone=+48 694 694 694
