--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation 'junit:junit:4.12'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation 'com.google.code.gson:gson'
     testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
