--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 }
 
 test {
