--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,9 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#ADMINISTRATION
 admin.mail=bartosz.kedziora89@gmail.com
+admin.name=bartosz
 
 # ACTUATOR INFO
 info.app.name=Tasks Application
